--- a/app/index.html
+++ b/app/index.html
@@ -5,18 +5,13 @@
   <title>Home</title>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-      <link rel="stylesheet" href="css/style.css">
-
+  <link rel="stylesheet" href="css/style.css">
 
 </head>
-
-
 <body data-spy="scroll" data-target="#myScrollspy" data-offset="20" ng-controller="controller">
-
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
         <div class="navbar-header">
@@ -32,7 +27,6 @@
           <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
         </ul>
       </div>
-      <button ng-click="sendReq()" value = "test">Test</button>
     </nav>
 
 
@@ -69,9 +63,8 @@
 
             </div>
         </div>
-      </div>
+</div>
 </body>
-
 
 <script src="../node_modules/angular/angular.js"></script>
 <!-- <script src="js/jqueryScript.js"></script> -->
@@ -79,7 +72,7 @@
 
 
 <script src='http://angular-ui.github.io/ui-ace/dist/ui-ace.min.js'></script>
-<!-- <script src='http://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js'></script> -->
+<script src='http://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js'></script>
 <script src='http://ace.c9.io/build/src-min-noconflict/ace.js'></script>
 <script src='http://angular-ui.github.io/ui-ace/dist/ui-ace.min.js'></script>
 <script src='http://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.5/dat.gui.min.js'></script>
