created the login and register request and linked with backend

--- a/app/index.html
+++ b/app/index.html
@@ -23,8 +23,8 @@
           <li><a href="#">Page 2</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-          <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+          <li><a ng-click="register()"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+          <li><a ng-click="login()"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
         </ul>
       </div>
     </nav>
@@ -72,7 +72,7 @@
 
 
 <script src='http://angular-ui.github.io/ui-ace/dist/ui-ace.min.js'></script>
-<script src='http://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js'></script>
+<!-- <script src='http://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js'></script> -->
 <script src='http://ace.c9.io/build/src-min-noconflict/ace.js'></script>
 <script src='http://angular-ui.github.io/ui-ace/dist/ui-ace.min.js'></script>
 <script src='http://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.5/dat.gui.min.js'></script>
